[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{PACKAGE_NAME}"
description = "A brief description of the package."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ORG/REPO"
Issues   = "https://github.com/ORG/REPO/issues"
Changelog = "https://github.com/ORG/REPO/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["your_package_name*"]
namespaces = false

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "mypy", "build", "twine"]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["dist", "build", ".venv", "venv"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "SIM",# flake8-simplify
]
ignore = [
  "E203", # whitespace before ':' (Black/ruff-format compatible)
]

[tool.ruff.format]
quote-style = "double"
